Revert "css: fix bottom margin that broke vertical-align"
This reverts commit f6611ed3c3ae50e6a7f1968e375311dc6a9f788f.

--- a/apps/web_theme/static/theme/css/base.css
+++ b/apps/web_theme/static/theme/css/base.css
@@ -233,7 +233,7 @@ input.checkbox {
 }
 
 .form .group {
-  margin-bottom: 0px;
+  margin-bottom: 15px;
 }
 
 .form div.left {
